--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,10 @@
 	<li><a href="/blog/">Blog</a></li>
       </ul>
     </nav>
+
+    <!--analytics-->
+    {% include analytics.html %}
+
     <div class="container">
       
       {{ content }}
