outline for cv, cleaned up some more css.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,11 +11,11 @@
       <div class="header clearfix">
 	
 	<nav><ul class="nav nav-pills pull-right">
-	    <li role="presentation" class="active"><a href="/">Alexander L. Hayes</a></li>
-	    <li role="presentation"><a href="/cv">CV</a></li>
+	    <!-- <li role="presentation" class="active"><a href="/">Alexander L. Hayes</a></li> -->
+	    <li role="presentation"><a href="/cv/">CV</a></li>
 	    <li role="presentation"><a href="/blog/">Blog</a></li>
 	</ul></nav>
-	<h3 class="text-muted">batflyer.net</h3>
+	<h3 class="text-muted"><a href="/">Alexander L. Hayes</a></h3>
 
       </div><!-- /.header clearfix -->
 	
@@ -24,7 +24,7 @@
       </div><!-- /.inner cover-->
       
       <div class="footer">
-	<p><a href="mailto:alexander@batflyer.net">alexander@batflyer.net</a> / <a href="https://github.com/batflyer">github.com/batflyer</a></p>
+	<p><span class="obfuscate">ten.reylftab@rednaxela</span> / <a href="https://github.com/batflyer">github.com/batflyer</a></p>
       </div><!-- /.footer-->
     </div><!-- /.container -->
     
