Adding font-awesome, updating home page, removing emacs backup files.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,5 +14,7 @@
   <link rel="stylesheet" type="text/css" href="/css/jumbotron-narrow.css">
   <!-- Another sheet for syntax highlighting -->
   <link rel="stylesheet" type="text/css" href="/css/syntax.css">
+  <!-- The main css -->
+  <link rel="stylesheet" type="text/css" href="/css/main.css">
 </head> 
 
