--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,7 +14,9 @@
   <link rel="stylesheet" type="text/css" href="/css/jumbotron-narrow.css">
   <!-- Another sheet for syntax highlighting -->
   <link rel="stylesheet" type="text/css" href="/css/syntax.css">
-  <!-- The main css -->
-  <link rel="stylesheet" type="text/css" href="/css/main.css">
+
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="/css/font-awesome.min.css">
+
 </head> 
 
