--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,20 @@
 @charset "UTF-8";
 @import url(font-awesome.min.css);
+@import url("https://fonts.googleapis.com/css?family=Lobster|Open+Sans:300,400,600,700,800");
 
 body {
     margin: 60px auto;
     width: 70%;
 }
+
+/*
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
     list-style: none;
     font-weight: bold;
 }
+*/
 nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
@@ -46,7 +50,6 @@ ul.posts li {
 }
 
 /* Fiddling with the icons */
-
 
 ul.icons {
     cursor: default;
