--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
 	<nav><ul class="nav nav-pills pull-right">
 	    <!-- <li role="presentation" class="active"><a href="/">Alexander L. Hayes</a></li> -->
 	    <li role="presentation"><a href="/cv/">CV</a></li>
+	    <li role="presentation"><a href="/publications/">Publications</a></li>
 	    <li role="presentation"><a href="/blog/">Blog</a></li>
 	</ul></nav>
 	<h3 class="text-muted"><a href="/">Alexander L. Hayes</a></h3>
@@ -24,7 +25,16 @@
       </div><!-- /.inner cover-->
       
       <div class="footer">
-	<p><span class="obfuscate">ten.reylftab@rednaxela</span> / <a href="https://github.com/batflyer">github.com/batflyer</a></p>
+	
+	<center>
+	  <p><span class="obfuscate">ten.reylftab@rednaxela</span></p>
+	  <p>
+	    <a href="https://www.linkedin.com/in/alexanderlhayes/" class="fa fa-linkedin fa-2x" style="margin-left: 0.3em; margin-right: 0.3em"></a>
+	    <a href="https://github.com/batflyer" class="fa fa-github fa-2x" style="margin-left: 0.3em; margin-right: 0.3em"></a>
+	    <a href="https://twitter.com/alexanderlhayes" class="fa fa-twitter fa-2x" style="margin-left: 0.3em; margin-right: 0.3em"></a>
+	  </p>
+	</center>
+	
       </div><!-- /.footer-->
     </div><!-- /.container -->
     
