Adjusted the image and added it to the home page.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,18 +11,17 @@
       <div class="header clearfix">
 	
 	<nav><ul class="nav nav-pills pull-right">
-	    <!-- <li role="presentation" class="active"><a href="/">Alexander L. Hayes</a></li> -->
 	    <li role="presentation"><a href="/cv/">CV</a></li>
 	    <li role="presentation"><a href="/publications/">Publications</a></li>
 	    <li role="presentation"><a href="/blog/">Blog</a></li>
 	</ul></nav>
-	<h3 class="text-muted"><a href="/">Alexander L. Hayes</a></h3>
+	<h3 class="text-muted"><a href="/"><i class="fa fa-home"></i> Alexander L. Hayes</a></h3>
 
       </div><!-- /.header clearfix -->
-	
+
       <div class="inner cover">
 	{{ content }}
-      </div><!-- /.inner cover-->
+      </div>
       
       <div class="footer">
 	
@@ -42,4 +41,3 @@
 
   </body>
 </html>
-
