Removed the center tag, the footer now uses a text-align property.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,17 +23,13 @@
 	{{ content }}
       </div>
       
-      <div class="footer">
-	
-	<center>
-	  <p><span class="obfuscate">ten.reylftab@rednaxela</span></p>
-	  <p>
-	    <a href="https://www.linkedin.com/in/alexanderlhayes/" class="fa fa-linkedin fa-2x" style="margin-left: 0.3em; margin-right: 0.3em"></a>
-	    <a href="https://github.com/batflyer" class="fa fa-github fa-2x" style="margin-left: 0.3em; margin-right: 0.3em"></a>
-	    <a href="https://twitter.com/alexanderlhayes" class="fa fa-twitter fa-2x" style="margin-left: 0.3em; margin-right: 0.3em"></a>
-	  </p>
-	</center>
-	
+      <div class="footer" style="text-align: center;">
+	<p><span class="obfuscate">ten.reylftab@rednaxela</span></p>
+	<p>
+	  <a href="https://www.linkedin.com/in/alexanderlhayes/" class="fa fa-linkedin fa-2x" style="margin-left: 0.3em; margin-right: 0.3em"></a>
+	  <a href="https://github.com/batflyer" class="fa fa-github fa-2x" style="margin-left: 0.3em; margin-right: 0.3em"></a>
+	  <a href="https://twitter.com/alexanderlhayes" class="fa fa-twitter fa-2x" style="margin-left: 0.3em; margin-right: 0.3em"></a>
+	</p>
       </div><!-- /.footer-->
     </div><!-- /.container -->
     
