Changing the footer, cv, header, default layout, blog, and css.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,8 @@
   <link rel="stylesheet" type="text/css" href="/css/jumbotron-narrow.css">
   <!-- Another sheet for syntax highlighting -->
   <link rel="stylesheet" type="text/css" href="/css/syntax.css">
+  <!-- main stylesheet -->
+  <link rel="stylesheet" type="text/css" href="/css/main.css">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="/css/font-awesome.min.css">
 
