--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,23 +15,22 @@
 	    <li role="presentation"><a href="/publications/">Publications</a></li>
 	    <li role="presentation"><a href="/blog/">Blog</a></li>
 	</ul></nav>
-	<h3 class="text-muted"><a href="/"><i class="fa fa-home"></i> Alexander L. Hayes</a></h3>
+	<h3 class="text-muted"><i class="fa fa-home"></i><a href="/" style="padding-left: 0.2em;">Alexander L. Hayes</a></h3>
 
-      </div><!-- /.header clearfix -->
+	</div><!-- /.header clearflix -->
 
       <div class="inner cover">
 	{{ content }}
       </div>
-      
-      <div class="footer" style="text-align: center;">
-	<p><span class="obfuscate">ten.reylftab@rednaxela</span></p>
-	<p>
-	  <a href="https://www.linkedin.com/in/alexanderlhayes/" class="fa fa-linkedin fa-2x" style="margin-left: 0.3em; margin-right: 0.3em"></a>
-	  <a href="https://github.com/batflyer" class="fa fa-github fa-2x" style="margin-left: 0.3em; margin-right: 0.3em"></a>
-	  <a href="https://twitter.com/alexanderlhayes" class="fa fa-twitter fa-2x" style="margin-left: 0.3em; margin-right: 0.3em"></a>
-	</p>
-      </div><!-- /.footer-->
+
     </div><!-- /.container -->
+
+    <footer class="fixed-bottom" style="position: fixed; height: 40px; bottom: 0; width: 100%; background-color: white; padding-top: 3px; text-align: center;">
+      <a href="https://www.linkedin.com/in/alexanderlhayes/" class="icons fa fa-linkedin fa-2x" style="margin-left: 0.3em; margin-right: 0.3em"></a>
+      <a href="https://github.com/batflyer" class="icons fa fa-github fa-2x" style="margin-left: 0.3em; margin-right: 0.3em"></a>
+      <a href="https://twitter.com/alexanderlhayes" class="icons fa fa-twitter fa-2x" style="margin-left: 0.3em; margin-right: 0.3em"></a>
+    </footer>
+    
     
     {% include scripts.html %}
 
