--- a/css/main.css
+++ b/css/main.css
@@ -1,71 +1,39 @@
 @charset "UTF-8";
-@import url(font-awesome.min.css);
-@import url("https://fonts.googleapis.com/css?family=Lobster|Open+Sans:300,400,600,700,800");
 
-body {
-    margin: 60px auto;
-    width: 70%;
-}
-
-/*
-nav ul, footer ul {
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
-    padding: 0px;
-    list-style: none;
-    font-weight: bold;
-}
-*/
-nav ul li, footer ul li {
-    display: inline;
-    margin-right: 20px;
-}
-a {
-    text-decoration: none;
-    color: #999;
-}
 a:hover {
     text-decoration: underline;
 }
+
 h1 {
     font-size: 2em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
+
+.cv {
+    font-size: 0.8em;
+}
+
 p {
     font-size: 1.1em;
     line-height: 1.4em;
     color: #333;
 }
+
 footer {
     border-top: 1px solid #d5d5d5;
     font-size: .8em;
 }
 
 ul.posts { 
-    margin: 20px auto 40px; 
-    font-size: 1.5em;
+    margin: 20px auto 40px;
+    font-size: 1.1em;
 }
 
 ul.posts li {
     list-style: none;
 }
 
-/* Fiddling with the icons */
-
-ul.icons {
-    cursor: default;
-    list-style: none;
+a.icons {
     padding-left: 0;
-}
-
-ul.icons li {
-    display: inline-block;
-    padding: 0 1em 0 0;
-}
-
-ul.icons li:last-child {
-    padding-right: 0;
-}
-
-ul.icons li .icon:before {
-    font-size: 2em;
+    text-decoration: none;
 }
