Removing the house icon and making the portrait responsive.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
 	    <li role="presentation"><a href="/publications/">Publications</a></li>
 	    <li role="presentation"><a href="/blog/">Blog</a></li>
 	</ul></nav>
-	<h3 class="text-muted"><i class="fa fa-home"></i><a href="/" style="padding-left: 0.2em;">Alexander L. Hayes</a></h3>
+	<h3 class="text-muted"><a href="/" style="padding-left: 0.2em;">Alexander L. Hayes</a></h3>
 
 	</div><!-- /.header clearflix -->
 
