--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,17 +2,21 @@
 <html lang="en">
 
   {% include head.html %}
-  
+
   <body>
-    
+
     {% include analytics.html %}
-    
+
     <div class="container">
       <div class="header clearfix">
-	
+
 	<nav><ul class="nav nav-pills pull-right">
 	    <li role="presentation"><a href="/cv/">CV</a></li>
+
+      <!--
 	    <li role="presentation"><a href="/publications/">Publications</a></li>
+      -->
+      <li role="presentation"><a href="/teaching/">Teaching</a></li>
 	    <li role="presentation"><a href="/blog/">Blog</a></li>
 	</ul></nav>
 	<h3 class="text-muted"><a href="/" style="padding-left: 0.2em;">Alexander L. Hayes</a></h3>
@@ -30,8 +34,8 @@
       <a href="https://github.com/batflyer" class="icons fa fa-github fa-2x" style="margin-left: 0.3em; margin-right: 0.3em"></a>
       <a href="https://twitter.com/alexanderlhayes" class="icons fa fa-twitter fa-2x" style="margin-left: 0.3em; margin-right: 0.3em"></a>
     </footer>
-    
-    
+
+
     {% include scripts.html %}
 
   </body>
