✨ Modifying "splash" so the image title and page title may be controlled separately. Tweaking two posts (latex-automata and knn-in-35-lines) to reflect the new ability to set page titles and splash titles separately. ⬆️ Upgrading dependencies.

--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -68,7 +68,7 @@
     <div class="page-lead" style="background-image:url({{ site.url }}/images/{{ page.image.feature }})">
       <div class="wrap page-lead-content">
         <h1 style="text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-">{{ page.title }}</h1>
+">{{ page.image.text }}</h1>
       </div><!-- /.page-lead-content -->
     </div><!-- /.page-lead -->
 
