--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,6 +42,10 @@
     <script src="{{ site.url }}/js/vendor/jquery-1.9.1.min.js"></script>
     <script src="{{ site.url }}/js/main.js"></script>
 
+    {% if jekyll.environment == "production" %}
+      {% include analytics.html %}
+    {% endif %}
+
   </body>
 
 </html>
