--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -105,6 +105,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.6.0/katex.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.6.0/contrib/auto-render.min.js"></script>
     <script>renderMathInElement(document.body);</script>
+
+    {% if jekyll.environment == "production" %}
+      {% include analytics.html %}
+    {% endif %}
+
   </body>
 
 </html>
