🚚 Renaming `_layouts/*.html` -> `_layout/*.liquid`
The `_layouts/` files are not valid HTML, so this renames them to
state that they are liquid files.

Add `_layouts/default_latex.liquid` for pages which need KaTeX
Add `_layouts/tutorial.liquid` for upcoming tutorial pages

--- a/_layouts/splash.liquid
+++ b/_layouts/splash.liquid
@@ -84,9 +84,12 @@
 
       <hr />
       <footer class="page-footer">
+        {% if page.categories %}{% include page-author.html %}{% endif %}
         {% if page.share != false %}{% include share-this.html %}{% endif %}
         {% include page-meta.html %}
       </footer><!-- /.footer -->
+      {% include footer.html %}
+
       <aside>
         {% if page.comments == true %}{% include comments.html %}{% endif %}
       </aside>
@@ -95,8 +98,6 @@
   {% if page.ads == true %}<div class="ads">{% include advertising.html %}</div><!-- /.ads -->{% endif %}
 </article><!-- /.wrap -->
 </div><!-- /#main -->
-
-{% include footer.html %}
 
     </div>
 
