--- a/_layouts/tutorial.liquid
+++ b/_layouts/tutorial.liquid
@@ -12,14 +12,19 @@ layout: default
 			</div><!-- /.page-image -->
 		</div><!-- /.page-feature -->
 		{% endif %}
-		{% include breadcrumbs.html %}
+
 		<div class="page-title">
 			<h1>{{ page.title }}</h1>
 		</div>
+
+		{% include tutorial-navigation.liquid %}
+
 		<div class="inner-wrap">
 			<div id="content" class="page-content" itemprop="articleBody">
 				{{ content }}
-				<hr />
+
+				{% include tutorial-navigation.liquid %}
+
 				<footer class="page-footer">
 					{% if page.categories %}{% include page-author.html %}{% endif %}
 					{% if page.share != false %}{% include share-this.html %}{% endif %}
