--- a/_sass/_animations.scss
+++ b/_sass/_animations.scss
@@ -2,9 +2,7 @@
    Animations
    ========================================================================== */
 
-/*
-   Wiggle animation
-   ========================================================================== */
+/* Wiggle animation */
 
 @include keyframes(wiggle) {
 	25%, 50%, 75%, 100% { @include transform-origin(top center); }
@@ -14,28 +12,91 @@
 	100% { @include transform(rotate(0deg)); }
 }
 
-/*
-   Pop animation
-   ========================================================================== */
+.wiggle:hover {
+	display: inline-block;
+	@include animation-name(wiggle);
+	@include animation-duration(0.2s);
+	@include animation-timing-function(linear);
+}
+
+/* Pop animation */
 
 @include keyframes(pop) {
 	50% { @include transform(scale(1.1)); }
 	100% { @include transform(scale(1)); }
 }
 
-/*
-   Hang animation
-   ========================================================================== */
+.pop:hover {
+	display: inline-block;
+	@include animation-name(pop);
+	@include animation-duration(0.2s);
+	@include animation-timing-function(linear);
+}
+
+/* Hang animation */
 
 @include keyframes(hang) {
 	50% { @include transform(translateY(-3px)); }
 	100% { @include transform(translateY(-6px)); }
 }
-.hang {
+.hang:hover {
 	display: inline-block;
 	@include animation-name(hang);
-	@include animation-duration(0.5s);
+	@include animation-duration(0.3s);
 	@include animation-timing-function(linear);
 	@include animation-iteration-count(infinite);
 	@include animation-direction(alternate);
+}
+
+/* Homepage Intro */
+
+@include keyframes(easein) {
+	0% {
+		opacity: 0;
+		@include transform(translateZ(-1rem) scale(0.9));
+	}
+	100% {
+		opacity: 1.0;
+		@include transform(None);
+	}
+}
+
+@include keyframes(slidefrombottom) {
+	0% {
+		opacity: 0;
+		@include transform(translateY(20rem));
+	}
+	100% {
+		opacity: 1.0;
+		@include transform(None);
+	}
+}
+
+.homepage-intro {
+	@include animation-duration(0.5s);
+	animation: easein .6s cubic-bezier(0, 0.95, 0.4, 1.4) forwards;
+}
+
+.homepage-second {
+	opacity: 0.0;
+	@include animation-delay(0.6s);
+	@include animation-duration(1.2s);
+	@include animation-fill-mode(forwards);
+	@include animation-name(slidefrombottom);
+}
+
+.homepage-third {
+	opacity: 0.0;
+	@include animation-delay(0.8s);
+	@include animation-duration(1.2s);
+	@include animation-fill-mode(forwards);
+	@include animation-name(slidefrombottom);
+}
+
+.homepage-fourth {
+	opacity: 0.0;
+	@include animation-delay(1.0s);
+	@include animation-duration(1.2s);
+	@include animation-fill-mode(forwards);
+	@include animation-name(slidefrombottom);
 }
