--- a/_sass/_breadcrumbs.scss
+++ b/_sass/_breadcrumbs.scss
@@ -5,12 +5,13 @@
 .breadcrumbs {
   @include row;
   margin-top: $gutter;
-  @include font-size(10,no);
+  @include font-size(18,no);
   a {
     display: inline-block;
     font-family: $alt-font;
     font-weight: 700;
     text-align: left;
     text-transform: uppercase;
+    padding: 10px;
   }
 }
