--- a/css/main.scss
+++ b/css/main.scss
@@ -48,6 +48,8 @@ sitemap: false
 @import "toc"; /* table of contents */
 @import "breadcrumbs";
 @import "syntax";
+@import "tile-list";
+@import "tutorials";
 
 /*
    Page specific
