--- a/_includes/page-author.html
+++ b/_includes/page-author.html
@@ -1,11 +1,14 @@
-{% if page.author %}
-  {% assign author = site.data.authors[page.author] %}{% else %}{% assign author = site.owner %}
-{% endif %}
+{% assign author = site.owner %}
 
 <div class="author-image">
-	<img src="{{ site.url }}/images/{{ author.avatar }}" alt="{{ author.name }}">
-</div><!-- ./author-image -->
+  <img src="{{ site.url }}/images/{{ author.avatar }}" alt="{{ author.name }}">
+</div>
+
 <div class="author-content">
-	<h3 class="author-name" >{{ site.data.messages.locales[site.locale].written_by }} {% if author.web %}<a href="{{ author.web }}" itemprop="author">{{ author.name }}</a>{% else %}<span itemprop="author">{{ author.name }}</span>{% endif %}</h3>
-	<p class="author-bio">{{ author.bio }}</p>
-</div><!-- ./author-content -->
+
+  <h3 class="author-name">{{ site.data.messages.locales[site.locale].writen_by }}
+    <a itemprop="publisher" href="{{ author.web }}"><span itemprop="author">{{ author.name }}</span></a>
+  </h3>
+  <p class="author-bio">{{ author.bio }}</p>
+
+</div>
