--- a/_layouts/article.liquid
+++ b/_layouts/article.liquid
@@ -3,9 +3,11 @@ layout: default_latex
 ---
 
 <div id="main" role="main">
-	<article class="wrap" itemscope itemtype="http://schema.org/Article">
+	<article class="wrap" itemscope itemtype="https://schema.org/BlogPosting">
 		<div class="page-title">
-			<h1>{{ page.title }}</h1>
+			<h1>
+				<span itemprop="name">{{ page.title }}</span>
+			</h1>
 		</div>
 		{% include breadcrumbs.html %}
 		{% if page.image.feature %}
@@ -16,7 +18,7 @@ layout: default_latex
 			</div><!-- /.page-image -->
 		</div><!-- /.page-feature -->
 		{% endif %}
-		
+
 		<div class="inner-wrap">
 			<div id="content" class="page-content" itemprop="articleBody">
 				{{ content }}
@@ -27,7 +29,7 @@ layout: default_latex
 					{% include page-meta.html %}
 				</footer><!-- /.footer -->
 				<aside>
-					{% if page.comments == true %}{% include comments.html %}{% endif %}
+					{% if page.comments == true and jekyll.environment == "production" %}{% include comments.html %}{% endif %}
 				</aside>
 			</div><!-- /.content -->
 		</div><!-- /.inner-wrap -->
