--- a/_sass/_breadcrumbs.scss
+++ b/_sass/_breadcrumbs.scss
@@ -15,3 +15,18 @@
     padding: 10px;
   }
 }
+
+.breadcrumb-list {
+  margin-top: $gutter;
+  @include font-size(18,no);
+  a {
+    display: inline-block;
+    font-family: $alt-font;
+    font-weight: 700;
+    text-align: left;
+    text-transform: uppercase;
+    padding: 10px;
+  }
+
+  display:inline;
+}
