--- a/_sass/_toc.scss
+++ b/_sass/_toc.scss
@@ -7,26 +7,20 @@
    ========================================================================== */
 
 .toc {
-  margin-left: -1 * $gutter;
   margin-right: -1 * $gutter;
+  margin-left: -1 * $gutter;
+  margin: 0;
   @include media($medium) {
-    margin-left: 0;
     margin-right: 0;
   }
   font-family: $alt-font;
-  ul {
-    margin-top: $gutter;
-    margin-bottom: $gutter;
-    border: 1px solid $border-color;
-    @include media($medium) {
-      border-radius: $border-radius;
-    }
-  }
   li {
     @include font-size(14,no,16);
     @include media($small) {
-      @include font-size(16,no,18);
+    @include font-size(16,no,18);
     }
+    padding-left: 0;
+    margin-left: 2em;;
     border-bottom: 1px solid $border-color;
     > a {
       display: block;
@@ -61,7 +55,6 @@
   @include media($medium) {
     @include span-columns(4);
   }
-  margin-left: 0;
   ul {
     margin-top: 0;
     @include media($small) {
